[package]
name = "cursive_tree_view"
version = "0.5.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
description = "A tree view implementation for cursive."
repository = "https://github.com/BonsaiDen/cursive_tree_view.git"
readme = "README.md"
keywords = ["cursive", "ncurses", "TUI", "UI", "tree"]
categories = ["command-line-interface", "gui"]
license = "MIT/Apache-2.0"

[dependencies]
debug_stub_derive = "0.3.0"
cursive = { version = "0.13", default-features = false }

[dev-dependencies]
cursive = "0.13"
